--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <img src="timg.png" alt="">
-<img src="td.png" alt="">
+<img src="tx.png" alt="">
 <canvas width="600" height="900" id = "cvs"></canvas>
 </body>
 <script src="flash.js"></script>
